# AMORESIM

./: .gitignore  CMakeLists.txt  doxygen_settings  readme.md
AmoreSim/: .gitignore  CMakeLists.txt  bashrc_template.sh  conanfile.txt  environment.sh.in  init_vis.mac  readme.md  vis.mac
AmoreSim/AmoreSim/: AmoreActionInitialization.hh  AmoreCMOParameterisation.hh  AmoreDetectorConstruction.hh  AmoreDetectorMessenger.hh  AmoreDetectorStaticInfo.hh  AmoreEventAction.hh  AmoreModuleSD.hh  AmoreParallelWorldConstruction.hh  AmorePhysicsList.hh  AmorePhysicsOp.hh  AmoreRootNtuple.hh  AmoreRootNtupleMessenger.hh  AmoreScintSD.hh  AmoreSimGitRevision.hh  AmoreTrackingAction.hh  AmoreTrajectoryPoint.hh  AmoreVetoSD.hh  G4LindhardPartition.hh  c2_function.hh
AmoreSim/mac/: II_dc_internal.mac.in  II_muonbckg.mac.in  II_neutbckg.mac.in  I_dc_internal.mac.in  I_muonbckg.mac.in  I_neutbckg.mac.in  Pilot_dc_external-pmt.mac.in  Pilot_dc_internal.mac.in  Pilot_muonbckg.mac.in  Pilot_neutbckg.mac.in  geom_validation.mac.in
AmoreSim/run/: olaf_jobsubmit.sh.in  rerun.sh.in  rerun_target  run_II_decay.sh.in  run_II_muon.sh.in  run_II_muon_GV.sh.in  run_II_neut.sh.in  run_II_neut_GV.sh.in  run_I_decay.sh.in  run_I_muon.sh.in  run_I_muon_GV.sh.in  run_I_neut.sh.in  run_I_neut_GV.sh.in  run_Pilot_decay.sh.in  run_Pilot_decay_GV.sh.in  run_Pilot_muon.sh.in  run_Pilot_muon_GV.sh.in  run_Pilot_neut.sh.in  run_Pilot_neut_GV.sh.in
AmoreSim/src/: AmoreActionInitialization.cc  AmoreCMOParameterisation.cc  AmoreDetectorConstruction.cc  AmoreDetectorMessenger.cc  AmoreEventAction.cc  AmoreModuleHit.cc  AmoreModuleSD.cc  AmoreParallelWorldConstruction.cc  AmorePhysicsList.cc  AmorePhysicsOp.cc  AmoreRootNtuple.cc  AmoreRootNtupleMessenger.cc  AmoreScintSD.cc  AmoreScintillation.cc  AmoreSimGitRevision.cc  AmoreSteppingAction.cc  AmoreTrackInformation.cc  AmoreTrackingAction.cc  AmoreTrajectory.cc  AmoreTrajectoryPoint.cc  AmoreVetoSD.cc  Amore_ConstructAMoRE10.cc  Amore_ConstructAMoRE200.cc  Amore_ConstructAMoRE200_ID.cc  Amore_ConstructAMoRE200_OD.cc  Amore_ConstructAMoRE200_PSMD.cc  Amore_ConstructAMoRE200_PSMD.cc_org  Amore_ConstructAMoRE200_ParallelWorldForWCMD.cc  Amore_ConstructAMoREPilot.cc  Amore_ConstructAMoREPilotRUN5.cc  Amore_ConstructAMoRE_I.cc  Amore_ConstructAMoRE_I.cc_org  Amore_ConstructMyDetector.cc  G4LindhardPartition.cc  G4ScreenedNuclearRecoil.cc  PhysListEmStandardNR.cc
AmoreSim/test/: amoresim.cc  neutgen.cc
CupSim/: CMakeLists.txt
CupSim/CupSim/: CupPrimaryGeneratorAction.hh  CupScintillation.hh  CupVetoSD.hh
CupSim/src/: CupDebugMessenger.cc  CupDetectorConstruction.cc  CupEllipsoid.cc  CupPMTOpticalModel.cc  CupPhysicsList.cc  CupPosGen.cc  CupPrimaryGeneratorAction.cc  CupRootNtuple.cc  CupScintillation.cc  CupSteppingAction.cc  CupTorusStack.cc  CupTrackingAction.cc  CupVEventAction.cc  CupVetoSD.cc  Cup_ConstructTestBench.cc  Cup_PMT_LogicalVolume.cc
MCObjs/: CMakeLists.txt
MCObjs/src/: MuonSD.cc  PMTSD.cc
include/: AmoreSim
include/AmoreSim/: AmoreDetectorStaticType.hh  AmoreModuleHit.hh  AmorePLManager.hh  AmoreParallelWorldConstruction.hh  AmorePhysicsList.hh_ori  AmoreScintillation.hh  AmoreSteppingAction.hh  AmoreTrackInformation.hh  AmoreTrajectory.hh  G4ScreenedNuclearRecoil.hh  PhysListEmStandardNR.hh  c2_function.icc
include/MCObjs/: MuonSD.hh  PMTSD.hh  TGSD.hh
